<resources>
    <string name="app_name">برطمان السعاده</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="stories">قصص</string>
    <string name="whatsApp">حالات </string>
    <string name="fav">مفضله</string>
    <string name="settings">اعدادات</string>
    <string name="message">رسائل</string>
    <string name="aboutApp">تطبيق برطمان السعاده هو تطبيق خيرى الهدف منه ادخال السعاده على قلب انسان ولو برساله  غير ربحى والارباح العائده من الاعلانات سيتم التبرع 50%  منها لاجل احد المستشفيات والجزء الاخر من اجل تشغيل التطبيق نفسه  ساعدنا بنشره</string>

    <string name="updateData_btn">تحديث البيانات</string>
    <string name="chatWithAdmin">"اترك رسالتك وهنرد عليك "</string>
    <string name="enterChat">ادخل بياناتك لبداء المحادثه</string>
    <string name="phone">رقم الهاتف</string>
    <string name="name">الاسم</string>
    <string name="startChat">ابداء الدردشه</string>

    <string name="ratUs">قيمنا على جوجل بلاى</string>
    <string name="we_have_widgs">التطبيق له ويدجات يمكن اضافتها فى الشاشه الرئيسيه بجوار الساعه لتظهر الرساله اماماك طوال اليوم </string>
    <string name="findHowToAdd">كيف يمكن اضافاتها</string>
    <string name="weLoveToHereFromYou">نحب ان نسمع لك اقتراحاتك او رسالتك  </string>
    <string name="writ_message">نحب ان نسمع لك اقتراحاتك او رسالتك  </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="hintName">اكتب اسمك حتى تظهر الرساله باسمك</string>
    <string name="done">Done</string>


</resources>