<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/stories"
        android:title="@string/stories"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/whatsApp"
        android:title="@string/whatsApp"
        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/fav"
        android:title="@string/fav"
        app:showAsAction="ifRoom"

        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"

        />
</menu>