<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/startConve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/enterChat"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        app:layout_constraintEnd_toEndOf="@id/startConve"
        app:layout_constraintStart_toStartOf="@id/startConve"
        android:gravity="center"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
            android:hint="@string/phone"
        android:id="@+id/getPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/startConve" />

    <EditText
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/startConve"
        app:layout_constraintStart_toStartOf="@id/startConve"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingStart="@dimen/_5sdp"
        android:hint="@string/name"
        android:id="@+id/getName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/getPhone" />

    <Button
        app:layout_constraintEnd_toEndOf="@id/startConve"
        app:layout_constraintStart_toStartOf="@id/startConve"
        app:layout_constraintTop_toBottomOf="@id/getName"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/_5sdp"
        android:text="@string/startChat"
        android:textColor="#fff"
        android:textSize="18sp"
        android:id="@+id/startChat"
        android:layout_marginBottom="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>