<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="75dp"
    android:background="@color/white"
    >
    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        app:layout_constraintTop_toTopOf="parent"
       >
        <RelativeLayout
            android:id="@+id/bottom_settings"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/settings" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_likedit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fav" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bottom_whatsApp"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_whatsapp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/whatsApp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:src="@drawable/jam" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/message" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_stories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_open_book" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stories" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>