<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_5sdp"
    tools:context=".ui.message.MessagesFragment">

    <androidx.cardview.widget.CardView
        android:elevation="@dimen/_3sdp"
        android:id="@+id/card1"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:paddingBottom="@dimen/_5sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView

                android:textColor="@color/colorBlack"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/aboutApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp" />


            <androidx.cardview.widget.CardView
                android:layout_marginBottom="@dimen/_10sdp"
                android:id="@+id/chatWithUs"
                android:layout_margin="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardBackgroundColor="@color/color4"
                app:cardElevation="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/colorBlack"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/weLoveToHereFromYou"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ratUsOnPlay"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:elevation="@dimen/_3sdp"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/rateUs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:textColor="@color/colorBlack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ratUs"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_stars" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ratUsOnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:elevation="@dimen/_3sdp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/we_have_widgs"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/howToAddWidgs"
                android:layout_margin="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:cardBackgroundColor="@color/color1"
                app:cardElevation="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/colorBlack"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/findHowToAdd"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>